# ttgen

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  Doxyfile  Makefile  Makefile.am  Makefile.in  README.md  README.txt  configure  configure.ac  data_structures.dia  demo.mkv  makefile
doc/: css.css  doxygen_modules.dox
m4/: ChangeLog
po/: ChangeLog  POTFILES.in  mr.po  project.pot
src/: .ycm_extra_conf.py  Makefile  Makefile.am  Makefile.in  callback.h  database.schema  database.sqlite3  gui.glade  gui.ui  i18n.h  interval.c  interval.h  libs.h  main.c  main.h
src/core/: evolution.c  evolution.h  genetic.c  genetic.h  interface.c  interface.h  makefile  meta.c  meta.h  tmp_main.c
src/db_tables/: allocations.c  allocations.h  batches.c  batches.h  db.c  db.h  meta.c  meta.h  population.c  population.h  rooms.c  rooms.h  schedule.c  schedule.h  subjects.c  subjects.h  teachers.c  teachers.h
src/menubar/: file.c  file.h  help.c  help.h  prefs.c  prefs.h
src/notebook/: allocations.c  allocations.h  batches.c  batches.h  notebook.c  notebook.h  rooms.c  rooms.h  schedules.c  schedules.h  subjects.c  subjects.h  teachers.c  teachers.h
src/prefs/: prefs.c  prefs.h
src/sqlite/: Makefile  Makefile.am
src/table_view/: table.c  table.h
